# toy-dns-server

./: .gitignore  LICENSE  README.md  config.default.yml  config.example.yml  pyproject.toml  pyvenv.cfg  requirements.txt
config/: config.default.yml  config.example.yml
e2e_tests/fixtures/: dns_dnssec_disabled.yml  dns_dnssec_enabled.yml  http_dnssec_disabled.yml  http_dnssec_enabled.yml  https_dnssec_disabled.yml  https_dnssec_enabled.yml
scripts/: dig_test.sh  generate_certs.sh  http_test.py  https_test.py  start_with_https.sh
scripts/fixtures/: config.https.yml
tests/config/: schema_test.py
tests/fixtures/: config.test.yml
tests/logging/: logger_test.py
tests/utils/: flags_test.py
toy_dns_server/: bootstraper.py  main.py
toy_dns_server/cache/: cache.py
toy_dns_server/config/: loader.py  schema.py
toy_dns_server/log/: base_logger.py  formatter.py  logger.py
toy_dns_server/logging/: logger.py
toy_dns_server/metrics/: exporter.py  metrics.py
toy_dns_server/resolver/: dns_resolver.py
toy_dns_server/security/: dnssec.py
toy_dns_server/server/dns/: handler.py  server.py
toy_dns_server/server/doh/: doh_handler.py  http_handler.py  http_server.py  https_server.py  server.py
toy_dns_server/utils/: deep_merge.py  flags.py
