[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toy_dns_server"
version = "0.1.0"
description = "A DNS and DoH server in Python"
authors = [{ name = "Jakub Surdej", email = "kubasurdej@gmail.com" }]
requires-python = ">=3.13.1"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pyyaml",
    "dnspython",
    "cachetools"
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "mypy"]

[tool.setuptools]
packages = ["toy_dns_server"]
